k3s/tools/jaeger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: dop-local
spec:
  selector: { app: jaeger }
  ports:
    - { name: otlp-grpc, port: 4317, targetPort: 4317 }
    - { name: otlp-http, port: 4318, targetPort: 4318 }
    - { name: ui,        port: 80,   targetPort: 16686 }
